--- a/style.css
+++ b/style.css
@@ -3,16 +3,19 @@
 
 body {
   background-color: #F0F6F9;
+  margin: 0;
+  padding: 0;
 }
 
 #containerId {
   width: auto;
 }
 
-#header-container{
+#header-container {
   text-align: center;
   color: #394648;
   font-family: 'Bebas Neue', sans-serif;
+  padding: 20px;
 }
 
 .container {
@@ -22,9 +25,8 @@ body {
   width: 100%;
   padding: 20px;
   background-color: #F0f6f9;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
   font-family: 'Montserrat', sans-serif;
-
 }
 
 .title {
@@ -32,7 +34,6 @@ body {
   text-align: center;
   color: #394648;
   font-family: 'Bebas Neue', sans-serif;
-
 }
 
 .input-container {
@@ -52,18 +53,18 @@ body {
   display: inline-block;
   width: 60px;
   margin-right: 10px;
-  margin-bottom: 5px; 
+  margin-bottom: 5px;
 }
 
 .funciontype-title {
   color: #394648;
-  margin-bottom: 5px; 
+  margin-bottom: 5px;
 }
 
 .funcion-input,
 .funciontype-form {
-  width: calc(100% - 70px);
-  margin-bottom: 10px; 
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .funcion-input:focus {
@@ -76,11 +77,11 @@ body {
   justify-content: center;
 }
 
-
-
-.canva-container {
+.canvas-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 /* Estilos Bootstrap */
@@ -92,7 +93,6 @@ body {
   display: flex;
   align-items: center;
 }
-
 
 .row {
   display: flex;
@@ -112,6 +112,9 @@ body {
 canvas {
   margin-top: 20px;
   border: 1px solid #ddd;
+  width: 100%;
+  max-width: 800px;
+  max-height: 800px;
 }
 
 .btn {
@@ -124,25 +127,32 @@ canvas {
   color: #fff;
 }
 
-
 @media (min-width: 768px) {
   .col > * {
     margin-right: 10px;
   }
-  
+
   .col:last-child > * {
     margin-right: 0;
   }
+
   .col > *:not(:last-child) {
     margin-right: 10px;
   }
-
 }
 
-#img-container{
+#img-container {
   text-align: center;
 }
 
-#ucc-logo{
+#ucc-logo {
   width: 10%;
+  max-width: 150px;
+  margin: 20px;
+}
+
+@media (max-width: 767px) {
+  .container {
+    margin: 10px;
+  }
 }
