--- a/style.css
+++ b/style.css
@@ -128,6 +128,21 @@ canvas {
   color: #fff;
 }
 
+#error-container {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  padding: 10px;
+  text-align: center;
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+}
+
 
 @media (min-width: 768px) {
   .col > * {
